Revert "Merge remote-tracking branch 'upstream/code-reflection' into code-reflection"
This reverts commit 248efce5d8f763688c00f2cd571c857102086063, reversing
changes made to 5f4e2bad7e26e73936feaba682271ae9aaa7ef32.