@@ -40,8 +40,6 @@ import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
-import static jdk.incubator.code.internal.StructuralPreconditions.*;
-
 /**
  * The top-level operation class for core operations.
  * <p>
@@ -124,8 +122,17 @@ public sealed abstract class CoreOp extends Op {
         final Body body;
 
         FuncOp(ExternalizedOp def) {
-            requireNoOperands(def);
-            this(requireAttribute(def, ATTRIBUTE_FUNC_NAME, true, String.class), requireSingleBody(def));
+            if (!def.operands().isEmpty()) {
+                throw new IllegalStateException("Bad op " + def.name());
+            }
+
+            String funcName = def.extractAttributeValue(ATTRIBUTE_FUNC_NAME, true,
+                    v -> switch (v) {
+                        case String s -> s;
+                        case null, default -> throw new UnsupportedOperationException("Unsupported func name value:" + v);
+                    });
+
+            this(funcName, def.bodyDefinitions().get(0));
         }
 
         FuncOp(FuncOp that, CodeContext cc, CodeTransformer ct) {
@@ -234,7 +241,13 @@ public sealed abstract class CoreOp extends Op {
         final CodeType resultType;
 
         FuncCallOp(ExternalizedOp def) {
-            this(requireAttribute(def, ATTRIBUTE_FUNC_NAME, true, String.class), def.resultType(), def.operands());
+            String funcName = def.extractAttributeValue(ATTRIBUTE_FUNC_NAME, true,
+                    v -> switch (v) {
+                        case String s -> s;
+                        case null, default -> throw new UnsupportedOperationException("Unsupported func name value:" + v);
+                    });
+
+            this(funcName, def.resultType(), def.operands());
         }
 
         FuncCallOp(FuncCallOp that, CodeContext cc) {
@@ -295,8 +308,11 @@ public sealed abstract class CoreOp extends Op {
         final Body body;
 
         ModuleOp(ExternalizedOp def) {
-            requireNoOperands(def);
-            this(requireSingleBody(def));
+            if (!def.operands().isEmpty()) {
+                throw new IllegalStateException("Bad op " + def.name());
+            }
+
+            this(def.bodyDefinitions().get(0));
         }
 
         ModuleOp(ModuleOp that, CodeContext cc, CodeTransformer ct) {
@@ -511,8 +527,7 @@ public sealed abstract class CoreOp extends Op {
         final Op quotedOp;
 
         QuotedOp(ExternalizedOp def) {
-            requireNoOperands(def);
-            this(requireSingleBody(def));
+            this(def.bodyDefinitions().get(0));
         }
 
         QuotedOp(QuotedOp that, CodeContext cc, CodeTransformer ct) {
@@ -587,8 +602,11 @@ public sealed abstract class CoreOp extends Op {
         static final String NAME = "return";
 
         ReturnOp(ExternalizedOp def) {
-            List<Value> operands = requireOperands(def, 0, 1);
-            this(operands.isEmpty() ? null : operands.getFirst());
+            if (def.operands().size() > 1) {
+                throw new IllegalArgumentException("Operation must have zero or one operand " + def.name());
+            }
+
+            this(def.operands().isEmpty() ? null : def.operands().get(0));
         }
 
         ReturnOp(ReturnOp that, CodeContext cc) {
@@ -637,7 +655,10 @@ public sealed abstract class CoreOp extends Op {
         static final String NAME = "unreachable";
 
         UnreachableOp(ExternalizedOp def) {
-            requireNoOperands(def);
+            if (!def.operands().isEmpty()) {
+                throw new IllegalArgumentException("Operation must zero operands " + def.name());
+            }
+
             this();
         }
 
@@ -674,7 +695,9 @@ public sealed abstract class CoreOp extends Op {
         static final String NAME = "yield";
 
         YieldOp(ExternalizedOp def) {
-            requireOperands(def, 0, 1);
+            if (def.operands().size() > 1) {
+                throw new IllegalArgumentException("Operation must have zero or one operand " + def.name());
+            }
 
             this(def.operands());
         }
@@ -730,8 +753,11 @@ public sealed abstract class CoreOp extends Op {
         final Block.Reference branch;
 
         BranchOp(ExternalizedOp def) {
-            requireNoOperands(def);
-            this(requireSingleSuccessor(def));
+            if (!def.operands().isEmpty() || def.successors().size() != 1) {
+                throw new IllegalArgumentException("Operation must have zero arguments and one successor" + def.name());
+            }
+
+            this(def.successors().get(0));
         }
 
         BranchOp(BranchOp that, CodeContext cc) {
@@ -789,8 +815,11 @@ public sealed abstract class CoreOp extends Op {
         final Block.Reference falseBranch;
 
         ConditionalBranchOp(ExternalizedOp def) {
-            List<Block.Reference> succ = requireSuccessors(def, 2);
-            this(requireSingleOperand(def), succ.get(0), succ.get(1));
+            if (def.operands().size() != 1 || def.successors().size() != 2) {
+                throw new IllegalArgumentException("Operation must one operand and two successors" + def.name());
+            }
+
+            this(def.operands().getFirst(), def.successors().get(0), def.successors().get(1));
         }
 
         ConditionalBranchOp(ConditionalBranchOp that, CodeContext cc) {
@@ -867,12 +896,17 @@ public sealed abstract class CoreOp extends Op {
         final CodeType resultType;
 
         ConstantOp(ExternalizedOp def) {
-            requireNoOperands(def);
-            Object v = requireAttribute(def, ATTRIBUTE_CONSTANT_VALUE, true);
-            this(def.resultType(), processConstantValue(def, def.resultType(), v));
+            if (!def.operands().isEmpty()) {
+                throw new IllegalArgumentException("Operation must have zero operands");
+            }
+
+            Object value = def.extractAttributeValue(ATTRIBUTE_CONSTANT_VALUE, true,
+                    v -> processConstantValue(def.resultType(), v));
+
+            this(def.resultType(), value);
         }
 
-        static Object processConstantValue(ExternalizedOp def, CodeType t, Object value) {
+        static Object processConstantValue(CodeType t, Object value) {
             if (t.equals(JavaType.BOOLEAN) && value instanceof Boolean) {
                 return value;
             } else if (t.equals(JavaType.BYTE) && value instanceof Number n) {
@@ -898,7 +932,8 @@ public sealed abstract class CoreOp extends Op {
             } else if (value == ExternalizedOp.NULL_ATTRIBUTE_VALUE) {
                 return null; // null constant
             }
-            throw unsupportedAttributeValueException(def, ATTRIBUTE_CONSTANT_VALUE, value);
+
+            throw new UnsupportedOperationException("Unsupported constant type and value: " + t + " " + value);
         }
 
         ConstantOp(ConstantOp that, CodeContext cc) {
@@ -993,21 +1028,22 @@ public sealed abstract class CoreOp extends Op {
         final VarType resultType;
 
         VarOp(ExternalizedOp def) {
-            List<Value> operands = requireOperands(def, 0, 1);
-            String name = def.extractAttributeValue(ATTRIBUTE_NAME, true, v -> switch (v) {
-                case String s -> s;
-                case null -> "";
-                default -> throw unsupportedAttributeValueException(def, ATTRIBUTE_NAME, v);
-            });
+            if (def.operands().size() > 1) {
+                throw new IllegalStateException("Operation must have zero or one operand");
+            }
+
+            String name = def.extractAttributeValue(ATTRIBUTE_NAME, true,
+                    v -> switch (v) {
+                        case String s -> s;
+                        case null -> "";
+                        default -> throw new UnsupportedOperationException("Unsupported var name value:" + v);
+                    });
 
             // @@@ Cannot use canonical constructor because type is wrapped
-            super(operands);
+            super(def.operands());
 
             this.varName = name;
-            if (!(def.resultType() instanceof VarType vt)) {
-                throw structuralException(def, "invalid result type: " + def.resultType());
-            }
-            this.resultType = vt;
+            this.resultType = (VarType) def.resultType();
         }
 
         VarOp(VarOp that, CodeContext cc) {
@@ -1133,9 +1169,9 @@ public sealed abstract class CoreOp extends Op {
             return (VarOp) varValue.op();
         }
 
-        static void requireVarOp(ExternalizedOp opdef, Value varValue) {
+        static void checkIsVarOp(Value varValue) {
             if (!(varValue.type() instanceof VarType)) {
-                throw structuralException(opdef, "value's type is not a variable type: " + varValue);
+                throw new IllegalArgumentException("Value's type is not a variable type: " + varValue);
             }
         }
 
@@ -1155,9 +1191,12 @@ public sealed abstract class CoreOp extends Op {
             static final String NAME = "var.load";
 
             VarLoadOp(ExternalizedOp opdef) {
-                Value varValue = requireSingleOperand(opdef);
-                requireVarOp(opdef, varValue);
-                this(varValue);
+                if (opdef.operands().size() != 1) {
+                    throw new IllegalArgumentException("Operation must have one operand");
+                }
+                checkIsVarOp(opdef.operands().get(0));
+
+                this(opdef.operands().get(0));
             }
 
             VarLoadOp(VarLoadOp that, CodeContext cc) {
@@ -1196,13 +1235,20 @@ public sealed abstract class CoreOp extends Op {
             static final String NAME = "var.store";
 
             VarStoreOp(ExternalizedOp opdef) {
-                List<Value> operands = requireOperands(opdef, 2);
-                requireVarOp(opdef, operands.getFirst());
-                super(operands);
+                if (opdef.operands().size() != 2) {
+                    throw new IllegalArgumentException("Operation must have two operands");
+                }
+                checkIsVarOp(opdef.operands().get(0));
+
+                this(opdef.operands().get(0), opdef.operands().get(1));
             }
 
             VarStoreOp(VarStoreOp that, CodeContext cc) {
                 super(that, cc);
+            }
+
+            VarStoreOp(List<Value> values) {
+                super(values);
             }
 
             @Override
@@ -1291,7 +1337,17 @@ public sealed abstract class CoreOp extends Op {
         final int index;
 
         TupleLoadOp(ExternalizedOp def) {
-            this(requireSingleOperand(def), requireAttribute(def, ATTRIBUTE_INDEX, true, Integer.class));
+            if (def.operands().size() != 1) {
+                throw new IllegalStateException("Operation must have one operand");
+            }
+
+            int index = def.extractAttributeValue(ATTRIBUTE_INDEX, true,
+                    v -> switch (v) {
+                        case Integer i -> i;
+                        case null, default -> throw new UnsupportedOperationException("Unsupported tuple index value:" + v);
+                    });
+
+            this(def.operands().get(0), index);
         }
 
         TupleLoadOp(TupleLoadOp that, CodeContext cc) {
@@ -1361,8 +1417,17 @@ public sealed abstract class CoreOp extends Op {
         final int index;
 
         TupleWithOp(ExternalizedOp def) {
-            super(requireOperands(def, 2));
-            this.index = requireAttribute(def, ATTRIBUTE_INDEX, true, Integer.class);
+            if (def.operands().size() != 2) {
+                throw new IllegalStateException("Operation must have two operands");
+            }
+
+            int index = def.extractAttributeValue(ATTRIBUTE_INDEX, true,
+                    v -> switch (v) {
+                        case Integer i -> i;
+                        case null, default -> throw new UnsupportedOperationException("Unsupported tuple index value:" + v);
+                    });
+
+            this(def.operands().get(0), index, def.operands().get(1));
         }
 
         TupleWithOp(TupleWithOp that, CodeContext cc) {
