@@ -52,7 +52,6 @@ import static jdk.incubator.code.dialect.core.CoreOp.*;
 import static jdk.incubator.code.dialect.java.JavaType.*;
 import static jdk.incubator.code.dialect.java.JavaType.VOID;
 import static jdk.incubator.code.internal.ArithmeticAndConvOpImpls.*;
-import static jdk.incubator.code.internal.StructuralPreconditions.*;
 
 /**
  * The top-level operation class for Java operations.
@@ -178,182 +177,181 @@ public sealed abstract class JavaOp extends Op {
             return new ConstantExpressionEvaluator(l).evaluate(op);
         }
 
-    }
+        class ConstantExpressionEvaluator {
+            private final MethodHandles.Lookup l;
+            private final Map<Value, Object> m = new HashMap<>();
 
-    static final class ConstantExpressionEvaluator {
-        private final MethodHandles.Lookup l;
-        private final Map<Value, Object> m = new HashMap<>();
-
-        ConstantExpressionEvaluator(MethodHandles.Lookup l) {
-            this.l = l;
-        }
-
-        <T extends Op & JavaExpression> Optional<Object> evaluate(T op) {
-            try {
-                Object v = this.eval(op);
-                return Optional.ofNullable(v);
-            } catch (NonConstantExpression e) {
-                return Optional.empty();
+            ConstantExpressionEvaluator(MethodHandles.Lookup l) {
+                this.l = l;
             }
-        }
 
-        Optional<Object> evaluate(Value v) {
-            try {
-                Object o = this.eval(v);
-                return Optional.ofNullable(o);
-            } catch (NonConstantExpression e) {
-                return Optional.empty();
+            <T extends Op & JavaExpression> Optional<Object> evaluate(T op) {
+                try {
+                    Object v = this.eval(op);
+                    return Optional.ofNullable(v);
+                } catch (NonConstantExpression e) {
+                    return Optional.empty();
+                }
             }
-        }
 
-        private Object eval(Op op) {
-            if (m.containsKey(op.result())) {
-                return m.get(op.result());
+            Optional<Object> evaluate(Value v) {
+                try {
+                    Object o = this.eval(v);
+                    return Optional.ofNullable(o);
+                } catch (NonConstantExpression e) {
+                    return Optional.empty();
+                }
             }
-            Object r = switch (op) {
-                case ConstantOp cop when isConstant(cop) -> {
-                    Object v = cop.value();
-                    yield v instanceof String s ? s.intern() : v;
+
+            private Object eval(Op op) {
+                if (m.containsKey(op.result())) {
+                    return m.get(op.result());
                 }
-                case VarAccessOp.VarLoadOp varLoadOp when varLoadOp.operands().getFirst() instanceof Result &&
-                        isConstant(varLoadOp.varOp()) -> eval(varLoadOp.varOp().initOperand());
-                case ConvOp _ -> {
-                    // we expect cast to primitive type
-                    var v = eval(op.operands().getFirst());
-                    yield ArithmeticAndConvOpImpls.evaluate(op, List.of(v));
-                }
-                case CastOp castOp -> {
-                    // we expect cast to String
-                    Value operand = castOp.operands().getFirst();
-                    if (!castOp.resultType().equals(J_L_STRING) || !operand.type().equals(J_L_STRING)) {
-                        throw new NonConstantExpression();
-                    }
-                    Object v = eval(operand);
-                    if (!(v instanceof String s)) {
-                        throw new NonConstantExpression();
-                    }
-                    yield s;
-                }
-                case ConcatOp concatOp -> {
-                    Object first = eval(concatOp.operands().getFirst());
-                    Object second = eval(concatOp.operands().getLast());
-                    yield (first.toString() + second).intern();
-                }
-                case FieldAccessOp.FieldLoadOp fieldLoadOp -> {
-                    Field field;
-                    VarHandle vh;
-                    try {
-                        field = fieldLoadOp.fieldReference().resolveToField(l);
-                        vh = fieldLoadOp.fieldReference().resolveToHandle(l);
-                    } catch (ReflectiveOperationException | IllegalArgumentException _) {
-                        // we cann't reflectivelly get the field
-                        throw new NonConstantExpression();
-                    }
-                    // Requirement: the field must be a constant variable.
-                    // Current checks:
-                    // 1) The field is declared final.
-                    // 2) The field type is a primitive or String.
-                    // Missing check:
-                    // 3) Verify the field is initialized and the initializer is a constant expression.
-                    if ((field.getModifiers() & Modifier.FINAL) == 0 ||
-                            !isConstantType(fieldLoadOp.fieldReference().type())) {
-                        throw new NonConstantExpression();
-                    }
-                    if ((field.getModifiers() & Modifier.STATIC) != 0) {
-                        Object v;
-                        try {
-                            v = vh.get();
-                        } catch (Throwable t) {
-                            throw new NonConstantExpression();
-                        }
-                        if (!isConstantValue(v)) {
-                            throw new NonConstantExpression();
-                        }
+                Object r = switch (op) {
+                    case ConstantOp cop when isConstant(cop) -> {
+                        Object v = cop.value();
                         yield v instanceof String s ? s.intern() : v;
-                    } else {
-                        // we can't get the value of an instance field from the model
-                        // we need the value of the receiver
-                        throw new NonConstantExpression();
                     }
-                }
-                case ArithmeticOperation _ -> {
-                    List<Object> values = op.operands().stream().map(this::eval).toList();
-                    yield ArithmeticAndConvOpImpls.evaluate(op, values);
-                }
-                case ConditionalExpressionOp _ -> {
-                    boolean p = evalBoolean(op.bodies().get(0));
-                    Object t = eval(op.bodies().get(1));
-                    Object f = eval(op.bodies().get(2));
-                    yield p ? t : f;
-                }
-                case ConditionalAndOp _ -> {
-                    boolean left = evalBoolean(op.bodies().get(0));
-                    boolean right = evalBoolean(op.bodies().get(1));
-                    yield left && right;
-                }
-                case ConditionalOrOp _ -> {
-                    boolean left = evalBoolean(op.bodies().get(0));
-                    boolean right = evalBoolean(op.bodies().get(1));
-                    yield left || right;
-                }
-                default -> throw new NonConstantExpression();
-            };
-            m.put(op.result(), r);
-            return r;
-        }
-
-        private Object eval(Value v) {
-            if (v.declaringElement() instanceof JavaExpression e) {
-                return eval((Op & JavaExpression) e);
+                    case VarAccessOp.VarLoadOp varLoadOp when varLoadOp.operands().getFirst() instanceof Result &&
+                            isConstant(varLoadOp.varOp()) -> eval(varLoadOp.varOp().initOperand());
+                    case ConvOp _ -> {
+                        // we expect cast to primitive type
+                        var v = eval(op.operands().getFirst());
+                        yield ArithmeticAndConvOpImpls.evaluate(op, List.of(v));
+                    }
+                    case CastOp castOp -> {
+                        // we expect cast to String
+                        Value operand = castOp.operands().getFirst();
+                        if (!castOp.resultType().equals(J_L_STRING) || !operand.type().equals(J_L_STRING)) {
+                            throw new NonConstantExpression();
+                        }
+                        Object v = eval(operand);
+                        if (!(v instanceof String s)) {
+                            throw new NonConstantExpression();
+                        }
+                        yield s;
+                    }
+                    case ConcatOp concatOp -> {
+                        Object first = eval(concatOp.operands().getFirst());
+                        Object second = eval(concatOp.operands().getLast());
+                        yield (first.toString() + second).intern();
+                    }
+                    case FieldAccessOp.FieldLoadOp fieldLoadOp -> {
+                        Field field;
+                        VarHandle vh;
+                        try {
+                            field = fieldLoadOp.fieldReference().resolveToField(l);
+                            vh = fieldLoadOp.fieldReference().resolveToHandle(l);
+                        } catch (ReflectiveOperationException | IllegalArgumentException _) {
+                            // we cann't reflectivelly get the field
+                            throw new NonConstantExpression();
+                        }
+                        // Requirement: the field must be a constant variable.
+                        // Current checks:
+                        // 1) The field is declared final.
+                        // 2) The field type is a primitive or String.
+                        // Missing check:
+                        // 3) Verify the field is initialized and the initializer is a constant expression.
+                        if ((field.getModifiers() & Modifier.FINAL) == 0 ||
+                                !isConstantType(fieldLoadOp.fieldReference().type())) {
+                            throw new NonConstantExpression();
+                        }
+                        if ((field.getModifiers() & Modifier.STATIC) != 0) {
+                            Object v;
+                            try {
+                                v = vh.get();
+                            } catch (Throwable t) {
+                                throw new NonConstantExpression();
+                            }
+                            if (!isConstantValue(v)) {
+                                throw new NonConstantExpression();
+                            }
+                            yield v instanceof String s ? s.intern() : v;
+                        } else {
+                            // we can't get the value of an instance field from the model
+                            // we need the value of the receiver
+                            throw new NonConstantExpression();
+                        }
+                    }
+                    case ArithmeticOperation _ -> {
+                        List<Object> values = op.operands().stream().map(this::eval).toList();
+                        yield ArithmeticAndConvOpImpls.evaluate(op, values);
+                    }
+                    case ConditionalExpressionOp _ -> {
+                        boolean p = evalBoolean(op.bodies().get(0));
+                        Object t = eval(op.bodies().get(1));
+                        Object f = eval(op.bodies().get(2));
+                        yield p ? t : f;
+                    }
+                    case ConditionalAndOp _ -> {
+                        boolean left = evalBoolean(op.bodies().get(0));
+                        boolean right = evalBoolean(op.bodies().get(1));
+                        yield left && right;
+                    }
+                    case ConditionalOrOp _ -> {
+                        boolean left = evalBoolean(op.bodies().get(0));
+                        boolean right = evalBoolean(op.bodies().get(1));
+                        yield left || right;
+                    }
+                    default -> throw new NonConstantExpression();
+                };
+                m.put(op.result(), r);
+                return r;
             }
-            throw new NonConstantExpression();
-        }
 
-        private Object eval(Body body) throws NonConstantExpression {
-            if (body.blocks().size() != 1 ||
-                    !(body.entryBlock().terminatingOp() instanceof CoreOp.YieldOp yop) ||
-                    yop.yieldValue() == null ||
-                    !isConstantType(yop.yieldValue().type())) {
+            private Object eval(Value v) {
+                if (v.declaringElement() instanceof JavaExpression e) {
+                    return eval((Op & JavaExpression) e);
+                }
                 throw new NonConstantExpression();
             }
-            return eval(yop.yieldValue());
-        }
 
-        private boolean evalBoolean(Body body) throws NonConstantExpression {
-            Object eval = eval(body);
-            if (!(eval instanceof Boolean b)) {
-                throw new NonConstantExpression();
+            private Object eval(Body body) throws NonConstantExpression {
+                if (body.blocks().size() != 1 ||
+                        !(body.entryBlock().terminatingOp() instanceof CoreOp.YieldOp yop) ||
+                        yop.yieldValue() == null ||
+                        !isConstantType(yop.yieldValue().type())) {
+                    throw new NonConstantExpression();
+                }
+                return eval(yop.yieldValue());
             }
-            return b;
-        }
 
-        private static boolean isConstant(CoreOp.ConstantOp op) {
-            return isConstantType(op.resultType()) && isConstantValue(op.value());
-        }
+            private boolean evalBoolean(Body body) throws NonConstantExpression {
+                Object eval = eval(body);
+                if (!(eval instanceof Boolean b)) {
+                    throw new NonConstantExpression();
+                }
+                return b;
+            }
 
-        private static boolean isConstant(VarOp op) {
-            // Requirement: the local variable must be a constant variable.
-            // Current checks:
-            // 1) The variable is initialized, and the initializer is a constant expression.
-            // 2) The variable type is a primitive or String.
-            // Missing check:
-            // 3) Ensure the variable is declared final
-            return isConstantType(op.varValueType()) &&
-                    !op.isUninitialized() &&
-                    // @@@ Add to VarOp
-                    op.result().uses().stream().noneMatch(u -> u.op() instanceof CoreOp.VarAccessOp.VarStoreOp);
-        }
+            private static boolean isConstant(CoreOp.ConstantOp op) {
+                return isConstantType(op.resultType()) && isConstantValue(op.value());
+            }
 
-        private static boolean isConstantValue(Object o) {
-            return switch (o) {
-                case String _ -> true;
-                case Boolean _, Byte _, Short _, Character _, Integer _, Long _, Float _, Double _ -> true;
-                case null, default -> false;
-            };
-        }
+            private static boolean isConstant(VarOp op) {
+                // Requirement: the local variable must be a constant variable.
+                // Current checks:
+                // 1) The variable is initialized, and the initializer is a constant expression.
+                // 2) The variable type is a primitive or String.
+                // Missing check:
+                // 3) Ensure the variable is declared final
+                return isConstantType(op.varValueType()) &&
+                        !op.isUninitialized() &&
+                        // @@@ Add to VarOp
+                        op.result().uses().stream().noneMatch(u -> u.op() instanceof CoreOp.VarAccessOp.VarStoreOp);
+            }
 
-        private static boolean isConstantType(CodeType e) {
-            return (e instanceof PrimitiveType && !VOID.equals(e)) || J_L_STRING.equals(e);
+            private static boolean isConstantValue(Object o) {
+                return switch (o) {
+                    case String _ -> true;
+                    case Boolean _, Byte _, Short _, Character _, Integer _, Long _, Float _, Double _ -> true;
+                    case null, default -> false;
+                };
+            }
+
+            private static boolean isConstantType(CodeType e) {
+                return (e instanceof PrimitiveType && !VOID.equals(e)) || J_L_STRING.equals(e);
+            }
         }
     }
 
@@ -490,11 +488,10 @@ public sealed abstract class JavaOp extends Op {
             boolean isReflectable = def.extractAttributeValue(ATTRIBUTE_LAMBDA_IS_REFLECTABLE,
                     false, v -> switch (v) {
                         case Boolean b -> b;
-                        case null -> false;
-                        default -> throw unsupportedAttributeValueException(def, ATTRIBUTE_LAMBDA_IS_REFLECTABLE, v);
+                        case null, default -> false;
                     });
 
-            this(def.resultType(), requireSingleBody(def), isReflectable);
+            this(def.resultType(), def.bodyDefinitions().get(0), isReflectable);
         }
 
         LambdaOp(LambdaOp that, CodeContext cc, CodeTransformer ct) {
@@ -769,7 +766,11 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "throw";
 
         ThrowOp(ExternalizedOp def) {
-            this(requireSingleOperand(def));
+            if (def.operands().size() != 1) {
+                throw new IllegalArgumentException("Operation must have one operand " + def.name());
+            }
+
+            this(def.operands().get(0));
         }
 
         ThrowOp(ThrowOp that, CodeContext cc) {
@@ -820,7 +821,7 @@ public sealed abstract class JavaOp extends Op {
         private final List<Body> bodies;
 
         AssertOp(ExternalizedOp def) {
-            this(requireBodies(def, 1, 2));
+            this(def.bodyDefinitions());
         }
 
         AssertOp(List<Body.Builder> bodies) {
@@ -899,7 +900,11 @@ public sealed abstract class JavaOp extends Op {
             static final String NAME = "monitor.enter";
 
             MonitorEnterOp(ExternalizedOp def) {
-                this(requireSingleOperand(def));
+                if (def.operands().size() != 1) {
+                    throw new IllegalArgumentException("Operation must have one operand " + def.name());
+                }
+
+                this(def.operands().get(0));
             }
 
             MonitorEnterOp(MonitorEnterOp that, CodeContext cc) {
@@ -924,7 +929,11 @@ public sealed abstract class JavaOp extends Op {
             static final String NAME = "monitor.exit";
 
             MonitorExitOp(ExternalizedOp def) {
-                this(requireSingleOperand(def));
+                if (def.operands().size() != 1) {
+                    throw new IllegalArgumentException("Operation must have one operand " + def.name());
+                }
+
+                this(def.operands().get(0));
             }
 
             MonitorExitOp(MonitorExitOp that, CodeContext cc) {
@@ -993,14 +1002,18 @@ public sealed abstract class JavaOp extends Op {
 
         InvokeOp(ExternalizedOp def) {
             // Required attribute
-            MethodRef invokeRef = requireAttribute(def, ATTRIBUTE_INVOKE_REF, true, MethodRef.class);
+            MethodRef invokeRef = def.extractAttributeValue(ATTRIBUTE_INVOKE_REF,
+                    true, v -> switch (v) {
+                        case MethodRef md -> md;
+                        case null, default ->
+                                throw new UnsupportedOperationException("Unsupported invoke reference value:" + v);
+                    });
 
             // If not present defaults to false
             boolean isVarArgs = def.extractAttributeValue(ATTRIBUTE_INVOKE_VARARGS,
                     false, v -> switch (v) {
                         case Boolean b -> b;
-                        case null -> false;
-                        default -> throw unsupportedAttributeValueException(def, ATTRIBUTE_INVOKE_VARARGS, v);
+                        case null, default -> false;
                     });
 
             // If not present and is not varargs defaults to class or instance invocation
@@ -1009,10 +1022,10 @@ public sealed abstract class JavaOp extends Op {
                     false, v -> switch (v) {
                         case String s -> InvokeKind.valueOf(s);
                         case InvokeKind k -> k;
-                        case null -> {
+                        case null, default -> {
                             if (isVarArgs) {
                                 // If varargs then we cannot infer invoke kind
-                                throw unsupportedAttributeValueException(def, ATTRIBUTE_INVOKE_KIND, v);
+                                throw new UnsupportedOperationException("Unsupported invoke kind value:" + v);
                             }
                             int paramCount = invokeRef.signature().parameterTypes().size();
                             int argCount = def.operands().size();
@@ -1020,7 +1033,6 @@ public sealed abstract class JavaOp extends Op {
                                     ? InvokeKind.INSTANCE
                                     : InvokeKind.STATIC;
                         }
-                        default -> throw unsupportedAttributeValueException(def, ATTRIBUTE_INVOKE_KIND, v);
                     });
 
 
@@ -1165,7 +1177,7 @@ public sealed abstract class JavaOp extends Op {
         final CodeType resultType;
 
         ConvOp(ExternalizedOp def) {
-            this(def.resultType(), requireSingleOperand(def));
+            this(def.resultType(), def.operands().get(0));
         }
 
         ConvOp(ConvOp that, CodeContext cc) {
@@ -1228,14 +1240,18 @@ public sealed abstract class JavaOp extends Op {
 
         NewOp(ExternalizedOp def) {
             // Required attribute
-            MethodRef constructorRef = requireAttribute(def, ATTRIBUTE_NEW_REF, true, MethodRef.class);
+            MethodRef constructorRef = def.extractAttributeValue(ATTRIBUTE_NEW_REF,
+                    true, v -> switch (v) {
+                        case MethodRef cd -> cd;
+                        case null, default ->
+                                throw new UnsupportedOperationException("Unsupported constructor reference value:" + v);
+                    });
 
             // If not present defaults to false
             boolean isVarArgs = def.extractAttributeValue(ATTRIBUTE_NEW_VARARGS,
                     false, v -> switch (v) {
                         case Boolean b -> b;
-                        case null -> false;
-                        default -> throw unsupportedAttributeValueException(def, ATTRIBUTE_NEW_VARARGS, v);
+                        case null, default -> false;
                     });
 
             this(isVarArgs, def.resultType(), constructorRef, def.operands());
@@ -1371,7 +1387,19 @@ public sealed abstract class JavaOp extends Op {
             final CodeType resultType;
 
             FieldLoadOp(ExternalizedOp def) {
-                super(requireOperands(def, 0, 1), requireAttribute(def, ATTRIBUTE_FIELD_REF, true, FieldRef.class));
+                if (def.operands().size() > 1) {
+                    throw new IllegalArgumentException("Operation must accept zero or one operand");
+                }
+
+                FieldRef fieldRef = def.extractAttributeValue(ATTRIBUTE_FIELD_REF, true,
+                        v -> switch (v) {
+                            case FieldRef fd -> fd;
+                            case null, default ->
+                                    throw new UnsupportedOperationException("Unsupported field reference value:" + v);
+                        });
+
+                super(def.operands(), fieldRef);
+
                 this.resultType = def.resultType();
             }
 
@@ -1420,7 +1448,18 @@ public sealed abstract class JavaOp extends Op {
             static final String NAME = "field.store";
 
             FieldStoreOp(ExternalizedOp def) {
-                super(requireOperands(def, 1, 2),  requireAttribute(def, ATTRIBUTE_FIELD_REF, true, FieldRef.class));
+                if (def.operands().isEmpty() || def.operands().size() > 2) {
+                    throw new IllegalArgumentException("Operation must accept one or two operands");
+                }
+
+                FieldRef fieldRef = def.extractAttributeValue(ATTRIBUTE_FIELD_REF, true,
+                        v -> switch (v) {
+                            case FieldRef fd -> fd;
+                            case null, default ->
+                                    throw new UnsupportedOperationException("Unsupported field reference value:" + v);
+                        });
+
+                super(def.operands(), fieldRef);
             }
 
             FieldStoreOp(FieldStoreOp that, CodeContext cc) {
@@ -1471,7 +1510,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "array.length";
 
         ArrayLengthOp(ExternalizedOp def) {
-            this(requireSingleOperand(def));
+            this(def.operands().get(0));
         }
 
         ArrayLengthOp(ArrayLengthOp that, CodeContext cc) {
@@ -1515,8 +1554,14 @@ public sealed abstract class JavaOp extends Op {
             super(that, cc);
         }
 
-        ArrayAccessOp(List<Value> operands) {
-            super(operands);
+        ArrayAccessOp(Value array, Value index, Value v) {
+            super(operands(array, index, v));
+        }
+
+        static List<Value> operands(Value array, Value index, Value v) {
+            return v == null
+                    ? List.of(array, index)
+                    : List.of(array, index, v);
         }
 
         /**
@@ -1546,8 +1591,11 @@ public sealed abstract class JavaOp extends Op {
             final CodeType componentType;
 
             ArrayLoadOp(ExternalizedOp def) {
-                super(requireOperands(def, 2));
-                this.componentType = def.resultType();
+                if (def.operands().size() != 2) {
+                    throw new IllegalArgumentException("Operation must have two operands");
+                }
+
+                this(def.operands().get(0), def.operands().get(1), def.resultType());
             }
 
             ArrayLoadOp(ArrayLoadOp that, CodeContext cc) {
@@ -1566,7 +1614,7 @@ public sealed abstract class JavaOp extends Op {
             }
 
             ArrayLoadOp(Value array, Value index, CodeType componentType) {
-                super(List.of(array, index));
+                super(array, index, null);
                 this.componentType = componentType;
             }
 
@@ -1590,8 +1638,11 @@ public sealed abstract class JavaOp extends Op {
             static final String NAME = "array.store";
 
             ArrayStoreOp(ExternalizedOp def) {
-                List<Value> operands = requireOperands(def, 3);
-                this(operands.get(0), operands.get(1), operands.get(2));
+                if (def.operands().size() != 3) {
+                    throw new IllegalArgumentException("Operation must have two operands");
+                }
+
+                this(def.operands().get(0), def.operands().get(1), def.operands().get(2));
             }
 
             ArrayStoreOp(ArrayStoreOp that, CodeContext cc) {
@@ -1604,7 +1655,7 @@ public sealed abstract class JavaOp extends Op {
             }
 
             ArrayStoreOp(Value array, Value index, Value v) {
-                super(List.of(array, index, v));
+                super(array, index, v);
             }
 
             /**
@@ -1640,7 +1691,17 @@ public sealed abstract class JavaOp extends Op {
         final CodeType targetType;
 
         InstanceOfOp(ExternalizedOp def) {
-            this(requireAttribute(def, ATTRIBUTE_INSTANCEOF_TYPE, true, JavaType.class), requireSingleOperand(def));
+            if (def.operands().size() != 1) {
+                throw new IllegalArgumentException("Operation must have one operand " + def.name());
+            }
+
+            CodeType targetType = def.extractAttributeValue(ATTRIBUTE_INSTANCEOF_TYPE, true,
+                    v -> switch (v) {
+                        case JavaType td -> td;
+                        case null, default -> throw new UnsupportedOperationException("Unsupported type value:" + v);
+                    });
+
+            this(targetType, def.operands().get(0));
         }
 
         InstanceOfOp(InstanceOfOp that, CodeContext cc) {
@@ -1704,7 +1765,17 @@ public sealed abstract class JavaOp extends Op {
         final CodeType targetType;
 
         CastOp(ExternalizedOp def) {
-            this(def.resultType(), requireAttribute(def, ATTRIBUTE_CAST_TYPE, true, JavaType.class), requireSingleOperand(def));
+            if (def.operands().size() != 1) {
+                throw new IllegalArgumentException("Operation must have one operand " + def.name());
+            }
+
+            CodeType type = def.extractAttributeValue(ATTRIBUTE_CAST_TYPE, true,
+                    v -> switch (v) {
+                        case JavaType td -> td;
+                        case null, default -> throw new UnsupportedOperationException("Unsupported type value:" + v);
+                    });
+
+            this(def.resultType(), type, def.operands().get(0));
         }
 
         CastOp(CastOp that, CodeContext cc) {
@@ -1769,7 +1840,7 @@ public sealed abstract class JavaOp extends Op {
         final List<Block.Reference> references;
 
         ExceptionRegionEnter(ExternalizedOp def) {
-            this(requireMinSuccessors(def, 2));
+            this(def.successors());
         }
 
         ExceptionRegionEnter(ExceptionRegionEnter that, CodeContext cc) {
@@ -1834,11 +1905,19 @@ public sealed abstract class JavaOp extends Op {
         final Block.Reference end;
 
         ExceptionRegionExit(ExternalizedOp def) {
-            Value enter = requireSingleOperand(def);
-            if (!(enter instanceof Op.Result or && or.op() instanceof ExceptionRegionEnter)) {
-                throw structuralException(def, "Value's is not an exception region entry: " + def.operands().getFirst());
+            if (def.operands().size() != 1) {
+                throw new IllegalArgumentException("Operation must have one operand" + def.name());
             }
-            this(enter, requireSingleSuccessor(def));
+
+            if (!(def.operands().getFirst().asResult().op() instanceof ExceptionRegionEnter)) {
+                throw new IllegalArgumentException("Value's is not an exception region entry: " + def.operands().getFirst());
+            }
+
+            if (def.successors().size() != 1) {
+                throw new IllegalArgumentException("Operation must have one successor" + def.name());
+            }
+
+            this(def.operands().getFirst(), def.successors().getFirst());
         }
 
         ExceptionRegionExit(ExceptionRegionExit that, CodeContext cc) {
@@ -1901,8 +1980,11 @@ public sealed abstract class JavaOp extends Op {
         }
 
         ConcatOp(ExternalizedOp def) {
-            List<Value> operands = requireOperands(def, 2);
-            this(operands.get(0), operands.get(1));
+            if (def.operands().size() != 2) {
+                throw new IllegalArgumentException("Concatenation Operation must have two operands.");
+            }
+
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         ConcatOp(Value lhs, Value rhs) {
@@ -1960,10 +2042,6 @@ public sealed abstract class JavaOp extends Op {
             super(that, cc);
         }
 
-        BinaryOp(ExternalizedOp def) {
-            super(requireOperands(def, 2));
-        }
-
         BinaryOp(Value lhs, Value rhs) {
             super(List.of(lhs, rhs));
         }
@@ -1999,10 +2077,6 @@ public sealed abstract class JavaOp extends Op {
             super(that, cc);
         }
 
-        UnaryOp(ExternalizedOp def) {
-            super(requireOperands(def, 1));
-        }
-
         UnaryOp(Value v) {
             super(List.of(v));
         }
@@ -2028,10 +2102,6 @@ public sealed abstract class JavaOp extends Op {
     public sealed static abstract class CompareOp extends ArithmeticOperation {
         CompareOp(CompareOp that, CodeContext cc) {
             super(that, cc);
-        }
-
-        CompareOp(ExternalizedOp def) {
-            super(requireOperands(def, 2));
         }
 
         CompareOp(Value lhs, Value rhs) {
@@ -2068,7 +2138,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "add";
 
         AddOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         AddOp(AddOp that, CodeContext cc) {
@@ -2095,7 +2165,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "sub";
 
         SubOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         SubOp(SubOp that, CodeContext cc) {
@@ -2122,7 +2192,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "mul";
 
         MulOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         MulOp(MulOp that, CodeContext cc) {
@@ -2149,7 +2219,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "div";
 
         DivOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         DivOp(DivOp that, CodeContext cc) {
@@ -2176,7 +2246,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "mod";
 
         ModOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         ModOp(ModOp that, CodeContext cc) {
@@ -2204,7 +2274,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "or";
 
         OrOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         OrOp(OrOp that, CodeContext cc) {
@@ -2232,7 +2302,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "and";
 
         AndOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         AndOp(AndOp that, CodeContext cc) {
@@ -2260,7 +2330,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "xor";
 
         XorOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         XorOp(XorOp that, CodeContext cc) {
@@ -2287,7 +2357,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "lshl";
 
         LshlOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         LshlOp(LshlOp that, CodeContext cc) {
@@ -2314,7 +2384,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "ashr";
 
         AshrOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         AshrOp(AshrOp that, CodeContext cc) {
@@ -2341,7 +2411,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "lshr";
 
         LshrOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         LshrOp(LshrOp that, CodeContext cc) {
@@ -2368,7 +2438,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "neg";
 
         NegOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0));
         }
 
         NegOp(NegOp that, CodeContext cc) {
@@ -2395,7 +2465,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "compl";
 
         ComplOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0));
         }
 
         ComplOp(ComplOp that, CodeContext cc) {
@@ -2422,7 +2492,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "not";
 
         NotOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0));
         }
 
         NotOp(NotOp that, CodeContext cc) {
@@ -2450,7 +2520,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "eq";
 
         EqOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         EqOp(EqOp that, CodeContext cc) {
@@ -2478,7 +2548,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "neq";
 
         NeqOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         NeqOp(NeqOp that, CodeContext cc) {
@@ -2505,7 +2575,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "gt";
 
         GtOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         GtOp(GtOp that, CodeContext cc) {
@@ -2533,7 +2603,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "ge";
 
         GeOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         GeOp(GeOp that, CodeContext cc) {
@@ -2561,7 +2631,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "lt";
 
         LtOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         LtOp(LtOp that, CodeContext cc) {
@@ -2589,7 +2659,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "le";
 
         LeOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().get(0), def.operands().get(1));
         }
 
         LeOp(LeOp that, CodeContext cc) {
@@ -2621,10 +2691,6 @@ public sealed abstract class JavaOp extends Op {
             implements Op.Lowerable, Op.BodyTerminating, JavaStatement {
         StatementTargetOp(StatementTargetOp that, CodeContext cc) {
             super(that, cc);
-        }
-
-        StatementTargetOp(ExternalizedOp def) {
-            super(requireOperands(def, 0, 1));
         }
 
         StatementTargetOp(Value label) {
@@ -2721,7 +2787,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "java.break";
 
         BreakOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().isEmpty() ? null : def.operands().get(0));
         }
 
         BreakOp(BreakOp that, CodeContext cc) {
@@ -2755,7 +2821,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "java.continue";
 
         ContinueOp(ExternalizedOp def) {
-            super(def);
+            this(def.operands().isEmpty() ? null : def.operands().get(0));
         }
 
         ContinueOp(ContinueOp that, CodeContext cc) {
@@ -2792,7 +2858,11 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "java.yield";
 
         YieldOp(ExternalizedOp def) {
-            this(requireSingleOperand(def));
+            if (def.operands().size() != 1) {
+                throw new IllegalArgumentException("Operation must have one operand " + def.name());
+            }
+
+            this(def.operands().get(0));
         }
 
         YieldOp(YieldOp that, CodeContext cc) {
@@ -2873,7 +2943,11 @@ public sealed abstract class JavaOp extends Op {
         final Body body;
 
         BlockOp(ExternalizedOp def) {
-            this(requireSingleBody(def));
+            if (!def.operands().isEmpty()) {
+                throw new IllegalStateException("Operation must have no operands");
+            }
+
+            this(def.bodyDefinitions().get(0));
         }
 
         BlockOp(BlockOp that, CodeContext cc, CodeTransformer ct) {
@@ -2956,8 +3030,7 @@ public sealed abstract class JavaOp extends Op {
         final Body blockBody;
 
         SynchronizedOp(ExternalizedOp def) {
-            List<Body.Builder> bodies = requireBodies(def, 2);
-            this(bodies.get(0), bodies.get(1));
+            this(def.bodyDefinitions().get(0), def.bodyDefinitions().get(1));
         }
 
         SynchronizedOp(SynchronizedOp that, CodeContext cc, CodeTransformer ct) {
@@ -3121,8 +3194,11 @@ public sealed abstract class JavaOp extends Op {
         final Body body;
 
         LabeledOp(ExternalizedOp def) {
-            requireNoOperands(def);
-            this(requireSingleBody(def));
+            if (!def.operands().isEmpty()) {
+                throw new IllegalStateException("Operation must have no operands");
+            }
+
+            this(def.bodyDefinitions().get(0));
         }
 
         LabeledOp(LabeledOp that, CodeContext cc, CodeTransformer ct) {
@@ -3361,8 +3437,11 @@ public sealed abstract class JavaOp extends Op {
         final List<Body> bodies;
 
         IfOp(ExternalizedOp def) {
-            requireNoOperands(def);
-            this(requireMinBodies(def, 2));
+            if (!def.operands().isEmpty()) {
+                throw new IllegalStateException("Operation must have no operands");
+            }
+
+            this(def.bodyDefinitions());
         }
 
         IfOp(IfOp that, CodeContext cc, CodeTransformer ct) {
@@ -3690,7 +3769,7 @@ public sealed abstract class JavaOp extends Op {
         final CodeType resultType;
 
         SwitchExpressionOp(ExternalizedOp def) {
-            this(def.resultType(), requireSingleOperand(def), requireBodyPairs(def));
+            this(def.resultType(), def.operands().get(0), def.bodyDefinitions());
         }
 
         SwitchExpressionOp(SwitchExpressionOp that, CodeContext cc, CodeTransformer ct) {
@@ -3731,7 +3810,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "java.switch.statement";
 
         SwitchStatementOp(ExternalizedOp def) {
-            this(requireSingleOperand(def), requireBodyPairs(def));
+            this(def.operands().get(0), def.bodyDefinitions());
         }
 
         SwitchStatementOp(SwitchStatementOp that, CodeContext cc, CodeTransformer ct) {
@@ -3960,8 +4039,10 @@ public sealed abstract class JavaOp extends Op {
         final Body loopBody;
 
         ForOp(ExternalizedOp def) {
-            List<Body.Builder> bodies = requireBodies(def, 4);
-            this(bodies.get(0), bodies.get(1), bodies.get(2), bodies.get(3));
+            this(def.bodyDefinitions().get(0),
+                    def.bodyDefinitions().get(1),
+                    def.bodyDefinitions().get(2),
+                    def.bodyDefinitions().get(3));
         }
 
         ForOp(ForOp that, CodeContext cc, CodeTransformer ct) {
@@ -3987,6 +4068,7 @@ public sealed abstract class JavaOp extends Op {
             this.initBody = initC.build(this);
 
             this.condBody = condC.build(this);
+
             this.updateBody = updateC.build(this);
             if (!updateBody.bodySignature().returnType().equals(VOID)) {
                 throw new IllegalArgumentException("Update should return void: " + updateBody.bodySignature());
@@ -4231,8 +4313,9 @@ public sealed abstract class JavaOp extends Op {
         final Body loopBody;
 
         EnhancedForOp(ExternalizedOp def) {
-            List<Body.Builder> bodies = requireBodies(def, 3);
-            this(bodies.get(0), bodies.get(1), bodies.get(2));
+            this(def.bodyDefinitions().get(0),
+                    def.bodyDefinitions().get(1),
+                    def.bodyDefinitions().get(2));
         }
 
         EnhancedForOp(EnhancedForOp that, CodeContext cc, CodeTransformer ct) {
@@ -4460,7 +4543,7 @@ public sealed abstract class JavaOp extends Op {
         private final List<Body> bodies;
 
         WhileOp(ExternalizedOp def) {
-            this(requireBodies(def, 2));
+            this(def.bodyDefinitions());
         }
 
         WhileOp(List<Body.Builder> bodyCs) {
@@ -4623,7 +4706,7 @@ public sealed abstract class JavaOp extends Op {
         private final List<Body> bodies;
 
         DoWhileOp(ExternalizedOp def) {
-            this(requireBodies(def, 2));
+            this(def.bodyDefinitions());
         }
 
         DoWhileOp(List<Body.Builder> bodyCs) {
@@ -4729,10 +4812,6 @@ public sealed abstract class JavaOp extends Op {
 
             // Copy body
             this.bodies = that.bodies.stream().map(b -> b.transform(cc, ct).build(this)).toList();
-        }
-
-        JavaConditionalOp(ExternalizedOp def) {
-            this(requireMinBodies(def, 2));
         }
 
         JavaConditionalOp(List<Body.Builder> bodyCs) {
@@ -4862,7 +4941,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "java.cand";
 
         ConditionalAndOp(ExternalizedOp def) {
-            super(def);
+            this(def.bodyDefinitions());
         }
 
         ConditionalAndOp(ConditionalAndOp that, CodeContext cc, CodeTransformer ct) {
@@ -4931,7 +5010,7 @@ public sealed abstract class JavaOp extends Op {
         static final String NAME = "java.cor";
 
         ConditionalOrOp(ExternalizedOp def) {
-            super(def);
+            this(def.bodyDefinitions());
         }
 
         ConditionalOrOp(ConditionalOrOp that, CodeContext cc, CodeTransformer ct) {
@@ -4974,7 +5053,11 @@ public sealed abstract class JavaOp extends Op {
         final List<Body> bodies;
 
         ConditionalExpressionOp(ExternalizedOp def) {
-            this(def.resultType(), requireBodies(def, 3));
+            if (!def.operands().isEmpty()) {
+                throw new IllegalStateException("Operation must have no operands");
+            }
+
+            this(def.resultType(), def.bodyDefinitions());
         }
 
         ConditionalExpressionOp(ConditionalExpressionOp that, CodeContext cc, CodeTransformer ct) {
@@ -5207,13 +5290,10 @@ public sealed abstract class JavaOp extends Op {
         final Body finallyBody;
 
         TryOp(ExternalizedOp def) {
-            List<Body.Builder> bodies = requireMinBodies(def, 1);
+            List<Body.Builder> bodies = def.bodyDefinitions();
             int bodyIndex = 0;
-            while (bodyIndex < bodies.size() && !bodies.get(bodyIndex).bodySignature().returnType().equals(VOID)) {
+            while (!bodies.get(bodyIndex).bodySignature().returnType().equals(VOID)) {
                 bodyIndex++;
-            }
-            if (bodyIndex == bodies.size()) {
-                throw structuralException(def, "no void try body found");
             }
             List<Body.Builder> resources = bodies.subList(0, bodyIndex);
             Body.Builder body = bodies.get(bodyIndex);
@@ -5922,7 +6002,7 @@ public sealed abstract class JavaOp extends Op {
                         v -> switch (v) {
                             case String s -> s;
                             case null -> null;
-                            default -> throw unsupportedAttributeValueException(def, ATTRIBUTE_BINDING_NAME, v);
+                            default -> throw new UnsupportedOperationException("Unsupported pattern binding name value:" + v);
                         });
                 // @@@ Cannot use canonical constructor because it wraps the given type
                 this.resultType = def.resultType();
@@ -5992,7 +6072,14 @@ public sealed abstract class JavaOp extends Op {
             final RecordTypeRef recordReference;
 
             RecordPatternOp(ExternalizedOp def) {
-                this(requireAttribute(def, ATTRIBUTE_RECORD_REF, true, RecordTypeRef.class), def.operands());
+                RecordTypeRef recordRef = def.extractAttributeValue(ATTRIBUTE_RECORD_REF, true,
+                        v -> switch (v) {
+                            case RecordTypeRef rtd -> rtd;
+                            case null, default ->
+                                    throw new UnsupportedOperationException("Unsupported record type reference value:" + v);
+                        });
+
+                this(recordRef, def.operands());
             }
 
             RecordPatternOp(RecordPatternOp that, CodeContext cc) {
@@ -6101,8 +6188,8 @@ public sealed abstract class JavaOp extends Op {
             final Body matchBody;
 
             MatchOp(ExternalizedOp def) {
-                List<Body.Builder> bodies = requireBodies(def, 2);
-                this(requireSingleOperand(def), bodies.get(0), bodies.get(1));
+                this(def.operands().get(0),
+                        def.bodyDefinitions().get(0), def.bodyDefinitions().get(1));
             }
 
             MatchOp(MatchOp that, CodeContext cc, CodeTransformer ct) {
